# CRS-JUNet

./: .gitignore  boutyo.py  build_database.py  check_point.py  check_point2.py  check_point3.py  evaluate_iou.py  flop.py  gen_edge_simple.py  infer.py  infer_2d2_3d_fps_no_knn_multi.py  infer_bev_512.py  infer_bev_512_6ch.py  infer_bev_512_8ch.py  infer_bev_512v2.py  infer_bev_512v3.py  kyoukai.py  modified_infer.py  prepare_bev.py  prepare_bev2.py  pyproject.toml  save_scan_and_image.py  save_scan_and_image2.py  train.py  vis_open3d.py  visualize.py
copy_paste_database/: class_11_000139.npy  class_11_000143.npy  class_11_000149.npy  class_11_000154.npy  class_11_000160.npy  class_11_000161.npy  class_11_000166.npy  class_11_000170.npy  class_11_000175.npy  class_11_000180.npy  class_11_000181.npy  class_11_000185.npy  class_11_000187.npy  class_11_000190.npy  class_11_000191.npy  class_11_000193.npy  class_11_000194.npy  class_11_000196.npy  class_11_000197.npy  class_11_000200.npy  class_11_000201.npy  class_11_000204.npy  class_11_000205.npy  class_11_000208.npy  class_11_000209.npy  class_11_000211.npy  class_11_000212.npy  class_11_000214.npy  class_11_000215.npy  class_11_000217.npy  class_11_000218.npy  class_11_000221.npy  class_11_000222.npy  class_11_000225.npy  class_11_000226.npy  class_11_000228.npy  class_11_000229.npy  class_11_000231.npy  class_11_000232.npy  class_11_000234.npy  (+28575 more)
lib/: backup.py  trainer.py  trainer_BEV1.py  trainer_BEV2.py  trainer_BEV3.py  trainer_Polar1.py  trainer_new.py  trainer_origin.py
memo/: Previous_research.txt  code.md  (+5 more)
(+124 files in other folders)
